# chess-board

./: .gitignore  chess_board.ipynb  pyproject.toml
